# FastAPI-setup

./: .gitignore  README.md  main.py  pyproject.toml
config/: logging_config.json
config/database/: database_config.json  tables_config.json
config/database/queries/: users.json
data-base/: pyproject.toml
data-base/src/data_base/: __init__.py
data-base/src/data_base/_config/: config_loader.py  config_loader_base.py  database_config_loader.py  queries_config_loader.py  tables_config_loader.py
data-base/src/data_base/_internal/: database_bootstrapper.py  database_wrapper.py  repository_initializer.py
data-base/src/data_base/_services/: table_repository.py
data-base/src/data_base/_services/mysql/: mysql_connection.py  mysql_table_repository.py
data-base/src/data_base/_shared/messages/: msg_base.py  msg_debug.py  msg_error.py  msg_info.py
data-base/src/data_base/_utils/: messages.py
data-base/src/data_base/core/: database_builder.py  database_initializer.py  database_service.py  database_wrapper.py
database/: example.txt
database/config/: db_loader.py  queries_loader.py  tables_loader.py
database/connection/: db_connection.py
database/core/: table.py
database/services/: db_handler.py  table_manager.py
database/src/: database.py
database/utils/: utilities.py
file-work/: pyproject.toml
file-work/src/file_work/_shared/messages/: msg_base.py  msg_debug.py  msg_error.py  msg_info.py
file-work/src/file_work/_utils/: messages.py  path_utils.py
file-work/src/file_work/core/: file_handler.py
log-manager/: pyproject.toml
log-manager/src/log_manager/: __init__.py
log-manager/src/log_manager/_internal/: color_formatter.py
log-manager/src/log_manager/core/: log_manager.py
src/: .env  init_db.py  main.py  test.db
src/api/: routers.py  users.py
src/app/: api.py  auth.py  config.py  db.py  items.py  main.py  models.py  security.py  users.py
src/app/api/: api_v1.py
src/app/api/routes/: user.py
src/app/core/: security.py
src/app/database/: base.py  session.py
src/app/models/: user.py
src/app/repositories/: user.py
src/app/schemas/: user.py
src/app/services/: user.py
