[project]
name = "fastapi-setup"
version = "0.1.0"
description = ""
authors = [
    {name = "John Doe",email = "john@doe.com"}
]
requires-python = ">=3.13"

[tool.poetry.dependencies]
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.30"
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"

passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-dotenv = "^1.1.0"

aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
exclude = ["README.md"]