[project]
name = "data-base"
version = "0.1.0"
description = ""
authors = [
    {name = "John Doe",email = "john@doe.com"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = [
    {include = "data_base", from = "src"},
]

[tool.poetry.dependencies]
mysql-connector-python = "^9.1.0"
file-work = { path = "../file-work"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"